--- a/mobile/.env
+++ b/mobile/.env
@@ -4,3 +4,4 @@ APPLICATION_NAME="Declaration (Development)"
 APPLICATION_SLUG="declaration-development"
 APPLICATION_SCHEME="declaration-development"
 APPLICATION_PACKAGE_ID="net.declaration.mobile.development"
+APPLICATION_ICON='./assets/images/icon.png'
