--- a/mobile/.production.env
+++ b/mobile/.production.env
@@ -4,3 +4,4 @@ APPLICATION_NAME="Declaration"
 APPLICATION_SLUG="declaration"
 APPLICATION_SCHEME="declaration"
 APPLICATION_PACKAGE_ID="net.declaration.mobile"
+APPLICATION_ICON='./assets/images/icon.png'
