--- a/mobile/.stage.env
+++ b/mobile/.stage.env
@@ -4,3 +4,4 @@ APPLICATION_NAME="Declaration (Stage)"
 APPLICATION_SLUG="declaration-stage"
 APPLICATION_SCHEME="declaration-stage"
 APPLICATION_PACKAGE_ID="net.declaration.mobile.stage"
+APPLICATION_ICON='./assets/images/icon-stage.png'
