--- a/mobile/.env
+++ b/mobile/.env
@@ -5,3 +5,4 @@ APPLICATION_SLUG="declaration-development"
 APPLICATION_SCHEME="declaration-development"
 APPLICATION_PACKAGE_ID="net.declaration.mobile.development"
 APPLICATION_ICON='./assets/images/icon.png'
+GOOGLE_API_KEY='AIzaSyC95Aezyy4zVEyb_qadkEKTb_ATMH7vLHI'
