--- a/mobile/.production.env
+++ b/mobile/.production.env
@@ -5,3 +5,4 @@ APPLICATION_SLUG="declaration"
 APPLICATION_SCHEME="declaration"
 APPLICATION_PACKAGE_ID="net.declaration.mobile"
 APPLICATION_ICON='./assets/images/icon.png'
+GOOGLE_API_KEY='AIzaSyC95Aezyy4zVEyb_qadkEKTb_ATMH7vLHI'
