--- a/mobile/.stage.env
+++ b/mobile/.stage.env
@@ -5,3 +5,4 @@ APPLICATION_SLUG="declaration-stage"
 APPLICATION_SCHEME="declaration-stage"
 APPLICATION_PACKAGE_ID="net.declaration.mobile.stage"
 APPLICATION_ICON='./assets/images/icon-stage.png'
+GOOGLE_API_KEY='AIzaSyC95Aezyy4zVEyb_qadkEKTb_ATMH7vLHI'
