--- a/mobile/package.json
+++ b/mobile/package.json
@@ -46,7 +46,8 @@
     "react-native-screens": "~2.9.0",
     "react-native-svg": "12.1.0",
     "react-native-web": "~0.11.7",
-    "urql": "^1.9.8"
+    "urql": "^1.9.8",
+    "expo-media-library": "~8.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
