Create ContentTilePager and basic structures

--- a/mobile/package.json
+++ b/mobile/package.json
@@ -47,7 +47,8 @@
     "react-native-svg": "12.1.0",
     "react-native-web": "~0.11.7",
     "urql": "^1.9.8",
-    "expo-media-library": "~8.2.1"
+    "expo-media-library": "~8.2.1",
+    "@react-native-community/viewpager": "3.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
