Refactor ContentTilePager to use FlatList instead of ViewPager

--- a/mobile/package.json
+++ b/mobile/package.json
@@ -25,11 +25,13 @@
     "expo": "^38.0.0",
     "expo-asset": "~8.1.7",
     "expo-av": "~8.2.1",
+    "expo-blur": "~8.1.2",
     "expo-constants": "~9.1.1",
     "expo-font": "~8.2.1",
     "expo-image-picker": "~8.3.0",
     "expo-linear-gradient": "~8.2.1",
     "expo-linking": "^1.0.1",
+    "expo-media-library": "~8.2.1",
     "expo-permissions": "~9.0.1",
     "expo-secure-store": "~9.0.1",
     "expo-splash-screen": "^0.3.1",
@@ -46,10 +48,7 @@
     "react-native-screens": "~2.9.0",
     "react-native-svg": "12.1.0",
     "react-native-web": "~0.11.7",
-    "urql": "^1.9.8",
-    "expo-media-library": "~8.2.1",
-    "@react-native-community/viewpager": "3.3.0",
-    "expo-blur": "~8.1.2"
+    "urql": "^1.9.8"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
