--- a/mobile/package.json
+++ b/mobile/package.json
@@ -57,6 +57,7 @@
     "@storybook/addons": "^5.3.19",
     "@storybook/react-native": "^5.3.19",
     "@storybook/react-native-server": "^5.3.19",
+    "@welldone-software/why-did-you-render": "^5.0.0-alpha.1",
     "babel-loader": "^8.1.0",
     "babel-plugin-module-resolver": "^4.0.0",
     "babel-preset-expo": "^8.2.3",
