First production release

--- a/mobile/.production.env
+++ b/mobile/.production.env
@@ -1,6 +1,6 @@
 HASURA_BASE_URL="https://hasura.declaration.net/v1/graphql"
 REST_BASE_URL="https://api.declaration.net/api"
-APPLICATION_NAME="Declaration"
+APPLICATION_NAME="Declaration β"
 APPLICATION_SLUG="declaration"
 APPLICATION_SCHEME="declaration"
 APPLICATION_PACKAGE_ID="net.declaration.mobile"
