--- a/backend/metadata/tables.yaml
+++ b/backend/metadata/tables.yaml
@@ -475,16 +475,17 @@
   - role: user
     permission:
       columns:
-      - body
-      - created_at
-      - creator_uuid
-      - heading
       - id
+      - body
+      - heading
+      - screenshot
+      - sub_heading
+      - created_at
+      - updated_at
+      - creator_uuid
       - media_uuid
       - meta_uuid
       - network_uuid
-      - sub_heading
-      - updated_at
       - uuid
       filter: {}
   update_permissions:
@@ -508,6 +509,7 @@
       - media_uuid
       - meta_uuid
       - network_uuid
+      - screenshot
       - sub_heading
       filter: {}
       check: null
