--- a/mobile/package.json
+++ b/mobile/package.json
@@ -46,6 +46,7 @@
     "react-native-safe-area-context": "~3.0.7",
     "react-native-screens": "~2.9.0",
     "react-native-svg": "12.1.0",
+    "react-native-view-shot": "^3.1.2",
     "react-native-web": "~0.11.7",
     "urql": "^1.9.8"
   },
