--- a/mobile/package.json
+++ b/mobile/package.json
@@ -1,5 +1,6 @@
 {
   "name": "declaration-mobile",
+  "version": "0.2.7",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
