Prod version update;  Heart icon for likes

--- a/mobile/.production.env
+++ b/mobile/.production.env
@@ -1,8 +1,8 @@
 HASURA_BASE_URL="https://hasura.declaration.net/v1/graphql"
 REST_BASE_URL="https://api.declaration.net/api"
-APPLICATION_NAME="Declaration β"
+APPLICATION_NAME="Declaration"
 APPLICATION_SLUG="declaration"
 APPLICATION_SCHEME="declaration"
-APPLICATION_PACKAGE_ID="net.declaration.mobile"
+APPLICATION_PACKAGE_ID="net.declaration"
 APPLICATION_ICON='./assets/images/icon.png'
 GOOGLE_API_KEY='AIzaSyC95Aezyy4zVEyb_qadkEKTb_ATMH7vLHI'
