--- a/mobile/package.json
+++ b/mobile/package.json
@@ -1,6 +1,6 @@
 {
   "name": "declaration-mobile",
-  "version": "0.2.16",
+  "version": "0.2.17",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
@@ -24,6 +24,7 @@
     "@react-navigation/bottom-tabs": "^5.3.1",
     "@react-navigation/native": "^5.2.1",
     "@react-navigation/stack": "^5.2.16",
+    "@sentry/react-native": "^1.9.0",
     "currency.js": "^2.0.3",
     "expo-asset": "~8.1.7",
     "expo-av": "~8.2.1",
@@ -51,6 +52,7 @@
     "react-native-svg": "12.1.0",
     "react-native-view-shot": "^3.1.2",
     "react-native-web": "~0.11.7",
+    "sentry-expo": "^3.0.2",
     "urql": "^1.9.8"
   },
   "devDependencies": {
