--- a/mobile/package.json
+++ b/mobile/package.json
@@ -2,6 +2,7 @@
   "name": "declaration-mobile",
   "version": "0.2.25",
   "main": "node_modules/expo/AppEntry.js",
+  "description": "Declaration Mobile app",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -42,9 +43,11 @@
     "expo-status-bar": "^1.0.0",
     "expo-web-browser": "~8.3.1",
     "graphql": "^15.3.0",
+    "graphql-ws": "^1.12.0",
     "react": "16.11.0",
     "react-dom": "16.11.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.2.tar.gz",
+    "react-native-elements": "^3.0.0-alpha.1",
     "react-native-gesture-handler": "~1.6.0",
     "react-native-modal": "^11.5.6",
     "react-native-reanimated": "~1.9.0",
@@ -54,6 +57,7 @@
     "react-native-view-shot": "^3.1.2",
     "react-native-web": "~0.11.7",
     "sentry-expo": "^3.0.2",
+    "subscriptions-transport-ws": "^0.9.18",
     "urql": "^1.9.8"
   },
   "devDependencies": {
