--- a/mobile/package.json
+++ b/mobile/package.json
@@ -20,6 +20,7 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "@expo-google-fonts/roboto": "^0.1.0",
     "@react-native-community/datetimepicker": "2.4.0",
     "@react-native-community/masked-view": "0.1.10",
     "@react-native-community/picker": "1.6.0",
@@ -48,12 +49,15 @@
     "react-dom": "16.11.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.2.tar.gz",
     "react-native-elements": "^3.0.0-alpha.1",
-    "react-native-gesture-handler": "~1.6.0",
+    "react-native-gesture-handler": "^1.6.1",
     "react-native-modal": "^11.5.6",
-    "react-native-reanimated": "~1.9.0",
+    "react-native-reanimated": "^1.9.0",
+    "react-native-redash": "^15.11.1",
+    "react-native-responsive-screen": "^1.4.1",
     "react-native-safe-area-context": "~3.0.7",
     "react-native-screens": "~2.9.0",
     "react-native-svg": "12.1.0",
+    "react-native-svg-transformer": "^0.14.3",
     "react-native-view-shot": "^3.1.2",
     "react-native-web": "~0.11.7",
     "sentry-expo": "^3.0.2",
